feat: first to the egg
